[WIP] Updated Markdown and header file

--- a/Proposal/metadata.yaml
+++ b/Proposal/metadata.yaml
@@ -9,7 +9,7 @@
 date: \today
 version: 0.2
 
-title: "Proposta de Trabalho Prático para Eletrónica 4"
+title: "Proposta de Projeto para Eletrónica 4"
 subtitle: "Eletrónica IV - 2017/18"
 
 author: André Gradim, Pedro Martins
