--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 /Phase_II/PWM.X/dist/default/
 
 
+/Phase_II/ADC.X/nbproject/private/
+/Phase_II/ADC.X/build/default/
+/Phase_II/ADC.X/dist/default/
