Add sendchar header to uart1.h

--- a/.gitignore
+++ b/.gitignore
@@ -7,17 +7,7 @@
 # Compressed files
 *.tar *.zip *.rar
 
-/UART.X/nbproject/private/
-/uart.X/nbproject/private/
-/UART.X/build/default/
-/UART.X/dist/default/
-/Phase_II/UART.X/nbproject/private/
-/Phase_II/UART.X/dist/default/
-/Phase_II/PWM.X/nbproject/private/
-/Phase_II/PWM.X/build/default/
-/Phase_II/PWM.X/dist/default/
+nbproject
+build
+dist
 
-
-/Phase_II/ADC.X/nbproject/private/
-/Phase_II/ADC.X/build/default/
-/Phase_II/ADC.X/dist/default/
